updated readme and screenshot are added for commerce

--- a/commerce/auctions/templates/auctions/index.html
+++ b/commerce/auctions/templates/auctions/index.html
@@ -16,11 +16,20 @@
 {% block body %}
     <h2>Active Listings</h2>
     {% for active_listing in active_listings %}
-        <div class="container border rounded m-5 p-4">
-            <p class="fw-bolder fs-5"><a class="text-decoration-none text-black" href="{% url 'auctions:listing_details' active_listing.title %}">{{ active_listing.title }}</a></p>
-            <p class="fs-6"><strong>Price: </strong>${{ active_listing.final_bid|floatformat:2 }}</p>
-            <p class="fs-6">{{ active_listing.description }}</p>
-            <p class="text-muted fs-6">Created {{ active_listing.date_created }}</p>
+        <div class="container border rounded m-5 p-4 container">
+            <div class="row justify-content-md-center">
+                <div class="col-md-auto">
+                    {% if active_listing.image_url != None %}
+                        <img src="{{ active_listing.image_url }}" alt="auction_image" style="width: 200px; height: 200px;" class="rounded float-start"/>
+                    {% endif %}
+                </div>
+                <div class="col">
+                    <p class="fw-bolder fs-5"><a class="text-decoration-none text-black" href="{% url 'auctions:listing_details' active_listing.title %}">{{ active_listing.title }}</a></p>
+                    <p class="fs-6"><strong>Price: </strong>${{ active_listing.final_bid|floatformat:2 }}</p>
+                    <p class="fs-6">{{ active_listing.description }}</p>
+                    <p class="text-muted fs-6">Created {{ active_listing.date_created }}</p>
+                </div>
+            </div>
         </div>
     {% empty %}
         <div class="container">
